# Ingestion

yash.core.azure.deservices.ingestion/: .coverage  .flake8  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
yash.core.azure.deservices.ingestion/ingestion/dataFactory/dataset/: ds_az_adls_excel.json  ds_az_sql.json  ds_binary.json  ds_json.json  ds_parquet.json  ds_sap_hana.json  ds_sql.json
yash.core.azure.deservices.ingestion/ingestion/dataFactory/factory/: managed-airflow-001.json  managed-airflow-002.json  managed-airflow-demo.json  meus-adf-dev-cptgbatch-002.json
yash.core.azure.deservices.ingestion/ingestion/dataFactory/integrationRuntime/: managed-airflow.json
yash.core.azure.deservices.ingestion/ingestion/dataFactory/linkedService/: demo_blob_storage.json  ls_az_adls.json  ls_az_databricks.json  ls_az_kv.json  ls_az_sql_server.json  ls_ma_demo.json  ls_sapHana.json  ls_sql_server.json
yash.core.azure.deservices.ingestion/ingestion/dataFactory/pipeline/: Demo.json  adls_excel_ingestion.json  adls_excel_ingestion_master.json  adls_file_ingestion_watermark.json  az_sql_adls_ingestion_bulk.json  az_sql_adls_ingestion_bulk_master.json  az_sql_adls_ingestion_watermark.json  az_sql_adls_ingestion_watermark_master.json  curation_orchestration.json  ingestion_orchestration.json  l1_l2_curated.json  l1_l2_curated_master.json  l3_curated.json  l3_curated_master.json  l4_curated.json  l4_curated_master.json  master_orchestration.json  sap_hana_ingestion_watermark.json  sap_hana_ingestion_watermark_master.json  sap_hana_to_adls_bulk_ingestion.json  sap_hana_to_adls_bulk_ingestion_master.json  sql_adls_ingestion_bulk.json  sql_adls_ingestion_bulk_master.json  sql_adls_ingestion_watermark.json  sql_adls_ingestion_watermark_master.json
yash.core.azure.deservices.ingestion/ingestion/dataFactory/trigger/: tr_scheduled_adls_excel.json  tr_scheduled_adls_excel_master.json  tr_scheduled_adls_file_ingestion_cdc.json  tr_scheduled_az_sql_adls_bulk.json  tr_scheduled_az_sql_adls_bulk_master.json  tr_scheduled_az_sql_adls_cdc.json  tr_scheduled_az_sql_adls_cdc_master.json  tr_scheduled_l1_l2_curated.json  tr_scheduled_l1_l2_curated_master.json  tr_scheduled_l3_curated.json  (+11 more)
yash.core.azure.deservices.ingestion/ingestion/factory/: mneu-adf-dev-cptgetl-001.json
yash.core.azure.deservices.ingestion/tests-reports/: functional-tests-results.xml
(+82 files in other folders)
